# atprose

./: Cargo.toml
crates/lexicon/: Cargo.toml
crates/lexicon/src/: lib.rs  load.rs
crates/lexicon/src/schema/: concrete.rs  container.rs  document.rs  id.rs  meta.rs  mod.rs  rpc.rs
crates/lexicon/test/: post.json  post.out
crates/types/: Cargo.toml
crates/types/src/: encoding.rs  lib.rs  ns.rs
crates/types/src/identity/: did.rs  handle.rs  identifier.rs  mod.rs
crates/types/src/record/: mod.rs  uri.rs
crates/types/src/record/key/: mod.rs  tid.rs
