[package]
name = "atprose-lexicon"
version = "0.0.1"
edition = "2021"
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
load = ["dep:globwalk"]

[dependencies]
atprose-types = { path = "../types", version = "^0.0.1" }
globwalk = { version = "0.9", optional = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
